edition = "2023";

package auth.v1;

import "google/protobuf/timestamp.proto";

message Store {
  map<string, TokenInfo> sessions = 1;
  map<int64, UserInfo> users = 2;
}

message TokenInfo {
  string session_id = 1;
  google.protobuf.Timestamp created = 2;
  int64 user_id = 3;
  bytes session_data = 4;
  string cred_name = 5;
}

message UserInfo {
  reserved 3;
  int64 user_id = 1;
  string username = 2;
  repeated Credential creds = 4;
}

message Credential {
  string name = 1;
  bytes cred = 2;
}
